base/payment/istio/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: paymentservice
  namespace: paymentservice
spec:
  workloadSelector:
    labels:
      app: paymentservice
  egress:
    - hosts:
        - "istio-system/*"
