base/payment/istio/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: paymentservice
  namespace: paymentservice
spec:
  selector:
    matchLabels:
      app: paymentservice
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/checkoutservice/sa/checkoutservice"]
